--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <!-- IMPORTANT: Replace YOUR_API_KEY_HERE with a valid Google Maps JavaScript API key.
      If your key is restricted by HTTP referrers, make sure the page origin matches the allowed referrers. -->
 <script async
-  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&libraries=places&callback=initMap"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqKeq3a0O__Mm7EQLy0zrHYuJUq8Ly1Ps&libraries=places&callback=initMap"
   onerror="mapsScriptFailed()"></script>
 
 </body>
